--- a/styles.css
+++ b/styles.css
@@ -152,13 +152,13 @@ h6 {
 }
 
 .sidebar-container .dashboard-title,
-.sidebar-container h3 {
+.sidebar-container h1 {
   font-size: 1.5rem;
   font-weight: 700;
   margin-bottom: 1.5rem;
 }
 
-.sidebar-container h3,
+.sidebar-container h1,
 .sidebar-container a {
   color: #fff;
 }
@@ -188,4 +188,40 @@ h6 {
 
 .bottom-nav {
   border: 1px red solid;
+}
+
+.header-top-row {
+  display: flex;
+  height: 50px;
+}
+
+.header-top-row>div {
+  border: blue 1px solid;
+  flex: 1;
+}
+
+.header-bottom-row {
+  display: flex;
+  height: 50px;
+  background-color: aquamarine;
+  justify-content: space-between;
+}
+
+.header-bottom-row .buttons {
+  justify-content: flex-end;
+  align-content: center;
+}
+
+button {
+  color: white;
+  background-color: var(--sidebar-bg);
+  border-radius: 15px;
+  outline: none;
+  border: none;
+  padding: 0.35rem;
+  width: 100px;
+}
+
+button:hover {
+  filter: brightness(1.2);
 }
