feat: add styling to project cards

--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@
   --header-bg: #F7F7F7;
   --main-bg: #8D9BA4;
   --card-bg: #F7F7F7;
-  --accent-color: #DDBB8C;
+  --accent-color: #868281;
   --border-radius: 8px;
   --shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  /* --color-dolphin: #8D9BA4;
-  --color-shark: #868281; */
+  /* --color-dolphin: #8D9BA4; */
+  /* --color-shark: #868281; */
+  /* --color-sand: #DDBB8C; */
 }
 
 * {
@@ -169,6 +170,10 @@ h6 {
   color: var(--sidebar-bg, coral);
 }
 
+.notification-icon:hover {
+  filter: brightness(1.2);
+}
+
 .search-bar {
   background-color: var(--card-bg, white);
   border: 2px solid var(--sidebar-bg, coral);
@@ -252,4 +257,66 @@ h6 {
 
 .action-buttons .button:hover {
   filter: brightness(1.2);
+}
+
+.dashboard-content {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.dashboard-content h3 {
+  font-weight: 500px;
+  margin-bottom: 1rem;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.5rem;
+}
+
+.card {
+  background-color: var(--card-bg, white);
+  border-radius: var(--border-radius);
+  padding: 1.5rem;
+  box-shadow: var(--shadow);
+  border-left: 8px solid var(--accent-color, darkgray);
+  display: flex;
+  flex-direction: column;
+  transition: border-left-color 0.3s ease;
+}
+
+.card:hover {
+  border-left-color: var(--sidebar-bg, coral);
+}
+
+.card h4 {
+  margin-bottom: 0.5rem;
+  font-size: 1.1rem;
+}
+
+.card p {
+  margin-bottom: 0.9rem;
+  color: var(--accent-color), darkgray;
+  font-size: 1rem;
+  flex-grow: 1;
+}
+
+.card-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1.2rem;
+
+}
+
+.card-actions i {
+  color: var(--accent-color, darkgray);
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+.card-actions i:hover {
+  filter: brightness(0.5);
 }
