--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,11 @@ h6 {
   margin-top: 2rem;
 }
 
+.sidebar li {
+  transition: filter 0.3s ease;
+  border-radius: var(--border-radius);
+}
+
 .sidebar li:hover {
   background-color: var(--sidebar-bg, coral);
   filter: brightness(1.2);
@@ -162,12 +167,14 @@ h6 {
 
 .search-icon {
   margin-top: 10px;
-  color: var(--sidebar-bg, coral);
+  color: var(--accent-color, darkgray);
+  transition: color 0.3s ease;
 }
 
 .notification-icon {
   margin-top: 10px;
   color: var(--sidebar-bg, coral);
+  transition: filter 0.3s ease;
 }
 
 .notification-icon:hover {
@@ -176,16 +183,30 @@ h6 {
 
 .search-bar {
   background-color: var(--card-bg, white);
-  border: 2px solid var(--sidebar-bg, coral);
+  border: 2px solid var(--accent-color, darkgray);
   border-radius: 20px;
   padding: 0.5rem 1rem;
   flex: 1;
   margin-right: 25px;
+  transition: border-color 0.3s ease;
 }
 
-.search-bar:focus {
+/* .search-bar:focus {
   outline: none;
-  background-color: #F27B6210;
+  border-color: var(--sidebar-bg, coral);
+} */
+
+.search-bar:hover,
+.search-bar:focus {
+  border-color: var(--sidebar-bg, coral);
+  outline: none;
+}
+
+.search-bar:hover~.search-icon,
+.search-bar:focus~.search-icon,
+.search-container:hover .search-icon,
+.search-container:focus-within .search-icon {
+  color: var(--sidebar-bg, coral);
 }
 
 .user-actions {
@@ -253,6 +274,7 @@ h6 {
   font-weight: 500;
   cursor: pointer;
   padding: 0.6rem 1.5rem;
+  transition: filter 0.3s ease;
 }
 
 .action-buttons .button:hover {
@@ -315,8 +337,9 @@ h6 {
   color: var(--accent-color, darkgray);
   cursor: pointer;
   font-size: 1.2rem;
+  transition: color 0.3s ease;
 }
 
 .card-actions i:hover {
-  filter: brightness(0.5);
+  color: var(--sidebar-bg, coral);
 }
