--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
   --accent-color: #868281;
   --border-radius: 8px;
   --shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  --shadow-bottom: 0 4px 5px -2px rgba(0, 0, 0, 0.1);
 }
 
 * {
@@ -255,7 +256,7 @@ h6 {
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 1rem;
-  box-shadow: var(--shadow);
+  box-shadow: var(--shadow-bottom);
 }
 
 .greeting-text p {
